[project]
name = "random-users"
version = "0.1"
requires-python = ">= 3.8"
dependencies = [
  "requests==2.31.0",
  "sqlalchemy==2.0.28",
  "sqlalchemy-utils==0.41.1",
  "click==8.1.7"
]

[project.optional-dependencies]
devel = [
  "pytest==8.1.1",
  "pre-commit==3.6.2"
]

[project.scripts]
random-users = "random_users.__main__:main"
